--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:sonic": "hardhat run scripts/deploy.js --network sonic",
+    "compile": "hardhat compile"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -24,11 +27,16 @@
     "thirdweb": "^5.64.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^4.0.3",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
+    "ethers": "^5.8.0",
+    "hardhat": "^2.27.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
