--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "15.0.7",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.11.3",
+    "ethers": "^5.8.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "tailwind-merge": "^2.5.4",
@@ -52,6 +53,7 @@
     "hardhat": "^2.27.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/pg": "^8.11.10"
   }
 }
